E_EM/SDK/include/MVGigE.h

typedef void* HANDLE;
	/*! 
	 *  \brief	设置网络数据包之间的时间间隔。如果网卡或电脑的性能欠佳，无法处理高速到达的数据包，会导致丢失数据包，
				从而使图像不完整。可以通过增加数据包之间的时间间隔以保证图像传输。但是增加该值将增加图像的时间延迟，
				并有可能影像到帧率。
	 *  \param [in]	hCam
	 *  \param [in]	nDelay_us 时间间隔(单位:微秒)
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetPacketDelay(HANDLE hCam, unsigned int nDelay_us);
	/*!
	 * \brief    读取定时器延时
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pDelay	定时器延时
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetTimerDelay(HANDLE hCam, uint32_t* pDelay);
	/*!
	 * \brief	读取定时器延时的范围
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pMin	定时器延时的最小值
	 * \param [out]	pMax 定时器延时的最大值
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetTimerDelayRange(HANDLE hCam, uint32_t* pMin, uint32_t* pMax);
	/*! 
	 *  \brief	当闪光同步源选为Timer1时MVSetStobeSource(hCam,LineSource_Timer1Active)
				设置Timer1在接到触发信号后延迟多少us开始计时
	 *  \param [in]	hCam		相机句柄
	 *  \param [in]	nDelay 接到触发信号后延迟多少us开始计时
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetTimerDelay(HANDLE hCam, uint32_t nDelay);
	/*!
	 * \brief    读取定时器计时时长
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pDuration	定时器计时时长
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetTimerDuration(HANDLE hCam, uint32_t* pDuration);
	/*!
	 * \brief    读取定时器计时时长取值范围
	 * \param [in]	hCam		相机句柄
	 * \param [out]	pMin	定时器计时时长最小值
	 * \param [out]	pMax	定时器计时时长最大值
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetTimerDurationRange(HANDLE hCam, uint32_t* pMin, uint32_t* pMax);
	/*! 
	*  \brief	当闪光同步源选为Timer1时MVSetStobeSource(hCam,LineSource_Timer1Active)
				设置Timer1在开始计时后，计时多长时间。
	 *  \param [in]	hCam
	 *  \param [in]	nDuration 设置Timer1在开始计时后，计时多长时间(us)。即输出高/低电平的脉冲宽度。
	 *  \retval MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetTimerDuration(HANDLE hCam, uint32_t nDuration);
	/*!
	 *  \brief 获取当前自动曝光模式
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	pExposureAuto	当前自动曝光模式
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetExposureAuto(HANDLE hCam, ExposureAutoEnums* pExposureAuto);
	/*!
	 *  \brief 设置自动曝光模式
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	ExposureAuto	自动曝光模式
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetExposureAuto(HANDLE hCam, ExposureAutoEnums ExposureAuto);
	/*!	
	 *  \brief 获取当前自动增益模式
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	pGainAuto	当前自动增益模式的
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetGainAuto(HANDLE hCam, GainAutoEnums* pGainAuto);
	/*!
	 *  \brief 设置当前自动增益模式
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	GainAuto	自动增益模式
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetGainAuto(HANDLE hCam, GainAutoEnums GainAuto);
	/*!
	 *  \brief 获取当前自动白平衡模式
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	pBalanceWhiteAuto	当前自动白平衡模式
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetBalanceWhiteAuto(HANDLE hCam, BalanceWhiteAutoEnums* pBalanceWhiteAuto);
	/*!
	 *  \brief 设置自动白平衡模式
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	BalanceWhiteAuto	自动白平衡模式
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetBalanceWhiteAuto(HANDLE hCam, BalanceWhiteAutoEnums BalanceWhiteAuto);
	/*!
	 *  \brief 获取自动调整增益时，增益调整范围的最小值
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	 pAutoGainLowerLimit	增益调整范围的最小值
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetAutoGainLowerLimit(HANDLE hCam, double* pAutoGainLowerLimit);
	/*!
	 *  \brief 设置自动调整增益时，增益调整范围的最小值
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	 fAutoGainLowerLimit	增益调整范围的最小值
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetAutoGainLowerLimit(HANDLE hCam, double fAutoGainLowerLimit);
	/*!
	 *  \brief 获取自动调整增益时，增益调整范围的最大值
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	 pAutoGainUpperLimit	增益调整范围的最大值
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetAutoGainUpperLimit(HANDLE hCam, double* pAutoGainUpperLimit);
	/*!
	 *  \brief 设置自动调整增益时，增益调整范围的最大值
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	 fAutoGainUpperLimit	曝光时间调整范围的最小值
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetAutoGainUpperLimit(HANDLE hCam, double fAutoGainUpperLimit);
	/*!
	 *  \brief 获取自动调整曝光时间时，曝光时间调整范围的最小值
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	 pAutoExposureTimeLowerLimit	曝光时间调整范围的最小值
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetAutoExposureTimeLowerLimit(HANDLE hCam, double* pAutoExposureTimeLowerLimit);
	/*!
	 *  \brief 设置自动调整曝光时间时，曝光时间调整范围的最小值
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	 fAutoExposureTimeLowerLimit	曝光时间调整范围的最大值
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetAutoExposureTimeLowerLimit(HANDLE hCam, double fAutoExposureTimeLowerLimit);
	/*!
	 *  \brief 获取自动调整曝光时间时，曝光时间调整范围的最大值
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	 pAutoExposureTimeUpperLimit	曝光时间调整范围的最大值
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetAutoExposureTimeUpperLimit(HANDLE hCam, double* pAutoExposureTimeUpperLimit);
	/*!
	 *  \brief 设置自动调整曝光时间时，曝光时间调整范围的最大值
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	 fAutoExposureTimeUpperLimit
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetAutoExposureTimeUpperLimit(HANDLE hCam, double fAutoExposureTimeUpperLimit);
	/*!
	 *  \brief 获取自动调整亮度(曝光、增益)时，期望调整到的图像亮度
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	 pAutoTargetValue	期望调整到的图像亮度
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetAutoTargetValue(HANDLE hCam, int* pAutoTargetValue);
	/*!
	 *  \brief 设置自动调整亮度(曝光、增益)时，期望调整到的图像亮度
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	nAutoTargetValue	期望调整到的图像亮度
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetAutoTargetValue(HANDLE hCam, int nAutoTargetValue);
	/*!
	 *  \brief 当自动增益和自动曝光时间都打开时，获取哪一个值优先调整
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	pAutoFunctionProfile	增益优先或曝光时间优先
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetAutoFunctionProfile(HANDLE hCam, AutoFunctionProfileEnums* pAutoFunctionProfile);
	/*!
	 *  \brief 当自动增益和自动曝光时间都打开时，设置哪一个值优先调整
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	AutoFunctionProfile	增益优先或曝光时间优先
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetAutoFunctionProfile(HANDLE hCam, AutoFunctionProfileEnums AutoFunctionProfile);
	/*!
	 *  \brief	自动增益或自动曝光时，图像亮度与目标亮度差异的容差。
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	 pAutoThreshold	图像亮度与目标亮度差异的容差
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetAutoThreshold(HANDLE hCam, int* pAutoThreshold);
	/*!
	 *  \brief 自动增益或自动曝光时，图像亮度与目标亮度差异的容差。
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	nAutoThreshold	图像亮度与目标亮度差异的容差
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetAutoThreshold(HANDLE hCam, int nAutoThreshold);
	/*!
	 *  \brief 获取当前伽马值
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	 pGamma	当前伽马值
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetGamma(HANDLE hCam, double* pGamma);
	/*!
	 *  \brief 获取伽马值可设置的范围
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	 pGammaMin	伽马最小值
	 *  \param [out]	 pGammaMax	伽马最大值
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetGammaRange(HANDLE hCam, double* pGammaMin, double* pGammaMax);
	/*!
	 *  \brief 设置伽马值
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	 fGamma	伽马值
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetGamma(HANDLE hCam, double fGamma);
	/*!
	 *  \brief 开始采集，并将采集到的图像显示到指定窗口
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	hWnd	窗口句柄
	 *  \param [in]	hWndMsg	消息句柄，如果不为NULL,当新的图像采集完毕,会发送消息(WM_USER+0x0200)到此窗口
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVStartGrabWindow(HANDLE hCam, HWND hWnd, HWND hWndMsg);
	
	/*!
	 *  \brief	停止采集到窗口
	 *  \param [in]	hCam	相机句柄
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVStopGrabWindow(HANDLE hCam);
	/*!
	 *  \brief	当采集到窗口时，暂停或继续采集。
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	 bFreeze 
	 *				TRUE:暂停采集，暂停后可以调用GetSampleGrab函数得到当前图像。
	 *				FALSE:继续采集
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVFreezeGrabWindow(HANDLE hCam, bool bFreeze);
	/*!
	 *  \brief 当采集到窗口时，设置图像显示的区域和比例。
	 *  将图像中(xSrc,ySrc,wSrc,hSrc)指定的区域显示到窗口中指定区域(xDest,yDest,wDest,hDest)
	 *  \param [in]	hCam	相机句柄
	 *  \param [in]	xDest	指定显示窗口中目标矩形左上角的逻辑X坐标
	 *  \param [in]	yDest	指定显示窗口中目标矩形左上角的逻辑Y坐标
	 *  \param [in]	wDest	指定显示窗口中目标矩形的宽度
	 *  \param [in]	hDest	指定显示窗口中目标矩形的高度
	 *  \param [in]	xSrc	指定图像源位图左上角的逻辑X坐标
	 *  \param [in]	ySrc	指定图像源位图左上角的逻辑Y坐标
	 *  \param [in]	wSrc	指定图像源位图宽度
	 *  \param [in]	hSrc	指定图像源位图高度
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVSetGrabWindow(HANDLE hCam, int xDest, int yDest, int wDest, int hDest, int xSrc, int ySrc, int wSrc, int hSrc);
	/*!
	 *  \brief 当调用MVFreezeGrabWindow(TRUE)后，调用此函数可以获取当前图像。
	 *  \param [in]	hCam	相机句柄
	 *  \param [out]	 image	图像
	 *  \param [out]	 nFrameID		图像的ID号
	 *  \retval  	MVST_SUCCESS			: 成功
	 */
	MVGIGE_API MVSTATUS_CODES __stdcall MVGetSampleGrab(HANDLE hCam, MVImage* image, int* nFrameID);