E_EM/SDK/VB/SingleGrab/MVGigE.bas

 
'\brief 设置网络数据包之间的时间间隔。如果网卡或电脑的性能欠佳，无法处理高速到达的数据包，会导致丢失数据包，
'从而使图像不完整。可以通过增加数据包之间的时间间隔以保证图像传输。但是增加该值将增加图像的时间延迟，
'并有可能影像到帧率?
'\param [in]    nDelay_us 时间间隔(单位:微秒)
Public Declare Function MVSetPacketDelay Lib "MVGigE.dll" (ByVal hCam As Long, ByVal nDelay_us As Long) As MVSTATUS_CODES


'\brief    读取定时器延时
'\param [out]  Long pDelay      定时器延时
Public Declare Function MVGetTimerDelay Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pDelay As Long) As MVSTATUS_CODES


'\brief        读取定时器延时的范围
'\param [out]  Long pMin        定时器延时的最小值
'\param [out]  Long pMax 定时器延时的最大值
Public Declare Function MVGetTimerDelayRange Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pMin As Long, ByRef pMax As Long) As MVSTATUS_CODES

 
'设置Timer1在接到触发信号后延迟多少us开始计时
'\param [in]    Long nDelay 接到触发信号后延迟多少us开始计时
Public Declare Function MVSetTimerDelay Lib "MVGigE.dll" (ByVal hCam As Long, ByVal nDelay As Long) As MVSTATUS_CODES


'\brief    读取定时器计时时长
'\param [out]  Long pDuration   定时器计时时长
Public Declare Function MVGetTimerDuration Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pDuration As Long) As MVSTATUS_CODES


'\brief    读取定时器计时时长取值范围
'\param [out]  Long pMin        定时器计时时长最小值
'\param [out]  Long pMax        定时器计时时长最大值
Public Declare Function MVGetTimerDurationRange Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pMin As Long, ByRef pMax As Long) As MVSTATUS_CODES

 
'设置Timer1在开始计时后，计时多长时间。
'\param [in]    Long nDuration 设置Timer1在开始计时后，计时多长时间(us)。即输出高/低电平的脉冲宽度。
Public Declare Function MVSetTimerDuration Lib "MVGigE.dll" (ByVal hCam As Long, ByVal nDuration As Long) As MVSTATUS_CODES



'\brief 获取当前自动曝光模式
'\param [out]   ExposureAutoEnums pExposureAuto       当前自动曝光模式
Public Declare Function MVGetExposureAuto Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pExposureAuto As ExposureAutoEnums) As MVSTATUS_CODES


'\brief 设置自动曝光模式
'\param [in]    ExposureAutoEnums ExposureAuto  自动曝光模式
Public Declare Function MVSetExposureAuto Lib "MVGigE.dll" (ByVal hCam As Long, ByVal ExposureAuto As ExposureAutoEnums) As MVSTATUS_CODES

        
'\brief 获取当前自动增益模式
'\param [out]   GainAutoEnums pGainAuto       当前自动增益模式的
Public Declare Function MVGetGainAuto Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pGainAuto As GainAutoEnums) As MVSTATUS_CODES


'\brief 设置当前自动增益模式
'\param [in]    GainAutoEnums GainAuto  自动增益模式
Public Declare Function MVSetGainAuto Lib "MVGigE.dll" (ByVal hCam As Long, ByVal GainAuto As GainAutoEnums) As MVSTATUS_CODES


'\brief 获取当前自动白平衡模式
'\param [out]   BalanceWhiteAutoEnums pBalanceWhiteAuto       当前自动白平衡模式
Public Declare Function MVGetBalanceWhiteAuto Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pBalanceWhiteAuto As BalanceWhiteAutoEnums) As MVSTATUS_CODES


'\brief 设置自动白平衡模式
'\param [in]    BalanceWhiteAutoEnums BalanceWhiteAuto  自动白平衡模式
Public Declare Function MVSetBalanceWhiteAuto Lib "MVGigE.dll" (ByVal hCam As Long, ByVal BalanceWhiteAuto As BalanceWhiteAutoEnums) As MVSTATUS_CODES


'\brief 获取自动调整增益时，增益调整范围的最小值
'\param [out]   Double pAutoGainLowerLimit    增益调整范围的最小值
Public Declare Function MVGetAutoGainLowerLimit Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pAutoGainLowerLimit As Double) As MVSTATUS_CODES


'\brief 设置自动调整增益时，增益调整范围的最小值
'\param [in]    Double fAutoGainLowerLimit      增益调整范围的最小值
Public Declare Function MVSetAutoGainLowerLimit Lib "MVGigE.dll" (ByVal hCam As Long, ByVal fAutoGainLowerLimit As Double) As MVSTATUS_CODES


'\brief 获取自动调整增益时，增益调整范围的最大值
'\param [out]   Double pAutoGainUpperLimit    增益调整范围的最大值
Public Declare Function MVGetAutoGainUpperLimit Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pAutoGainUpperLimit As Double) As MVSTATUS_CODES


'\brief 设置自动调整增益时，增益调整范围的最大值
'\param [in]    Double fAutoGainUpperLimit      曝光时间调整范围的最小值
Public Declare Function MVSetAutoGainUpperLimit Lib "MVGigE.dll" (ByVal hCam As Long, ByVal fAutoGainUpperLimit As Double) As MVSTATUS_CODES


'\brief 获取自动调整曝光时间时，曝光时间调整范围的最小值
'\param [out]   Double pAutoExposureTimeLowerLimit    曝光时间调整范围的最小值
Public Declare Function MVGetAutoExposureTimeLowerLimit Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pAutoExposureTimeLowerLimit As Double) As MVSTATUS_CODES


'\brief 设置自动调整曝光时间时，曝光时间调整范围的最小值
'\param [in]    Double fAutoExposureTimeLowerLimit      曝光时间调整范围的最大值
Public Declare Function MVSetAutoExposureTimeLowerLimit Lib "MVGigE.dll" (ByVal hCam As Long, ByVal fAutoExposureTimeLowerLimit As Double) As MVSTATUS_CODES


'\brief 获取自动调整曝光时间时，曝光时间调整范围的最大值
'\param [out]   Double pAutoExposureTimeUpperLimit    曝光时间调整范围的最大值
Public Declare Function MVGetAutoExposureTimeUpperLimit Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pAutoExposureTimeUpperLimit As Double) As MVSTATUS_CODES


'\brief 设置自动调整曝光时间时，曝光时间调整范围的最大值
'\param [in]    Double fAutoExposureTimeUpperLimit
Public Declare Function MVSetAutoExposureTimeUpperLimit Lib "MVGigE.dll" (ByVal hCam As Long, ByVal fAutoExposureTimeUpperLimit As Double) As MVSTATUS_CODES


'\brief 获取自动调整亮度(曝光、增益)时，期望调整到的图像亮度
'\param [out]   Long pAutoTargetValue 期望调整到的图像亮度
Public Declare Function MVGetAutoTargetValue Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pAutoTargetValue As Long) As MVSTATUS_CODES


'\brief 设置自动调整亮度(曝光、增益)时，期望调整到的图像亮度
'\param [in]    Long nAutoTargetValue   期望调整到的图像亮度
Public Declare Function MVSetAutoTargetValue Lib "MVGigE.dll" (ByVal hCam As Long, ByVal nAutoTargetValue As Long) As MVSTATUS_CODES


'\brief 当自动增益和自动曝光时间都打开时，获取哪一个值优先调整
'\param [out]   AutoFunctionProfileEnums pAutoFunctionProfile 增益优先或曝光时间优先
Public Declare Function MVGetAutoFunctionProfile Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pAutoFunctionProfile As AutoFunctionProfileEnums) As MVSTATUS_CODES


'\brief 当自动增益和自动曝光时间都打开时，设置哪一个值优先调整
'\param [in]    AutoFunctionProfileEnums AutoFunctionProfile    增益优先或曝光时间优先
Public Declare Function MVSetAutoFunctionProfile Lib "MVGigE.dll" (ByVal hCam As Long, ByVal AutoFunctionProfile As AutoFunctionProfileEnums) As MVSTATUS_CODES


'\brief 自动增益或自动曝光时，图像亮度与目标亮度差异的容差。
'\param [out]   Long pAutoThreshold   图像亮度与目标亮度差异的容差
Public Declare Function MVGetAutoThreshold Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pAutoThreshold As Long) As MVSTATUS_CODES


'\brief 自动增益或自动曝光时，图像亮度与目标亮度差异的容差。
'\param [in]    Long nAutoThreshold     图像亮度与目标亮度差异的容差
Public Declare Function MVSetAutoThreshold Lib "MVGigE.dll" (ByVal hCam As Long, ByVal nAutoThreshold As Long) As MVSTATUS_CODES


'\brief 获取当前伽马值
'\param [out]   Double pGamma 当前伽马值
Public Declare Function MVGetGamma Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pGamma As Double) As MVSTATUS_CODES


'\brief 获取伽马值可设置的范围
'\param [out]   Double pGammaMin      伽马最小值
'\param [out]   Double pGammaMax      伽马最大值
Public Declare Function MVGetGammaRange Lib "MVGigE.dll" (ByVal hCam As Long, ByRef pGammaMin As Double, ByRef pGammaMax As Double) As MVSTATUS_CODES

'\brief 设置伽马
'\param [out]   Double fGamma 伽马值
Public Declare Function MVSetGamma Lib "MVGigE.dll" (ByVal hCam As Long, ByVal fGamma As Double) As MVSTATUS_CODES


Public Declare Function MVImageCreate Lib "MVGigE.dll" (ByVal width As Long, ByVal height As Long, ByVal bpp As Long) As Long
Public Declare Function MVImageDraw Lib "MVGigE.dll" (ByVal hImage As Long, ByVal hdc As Long, ByVal xDest As Long, ByVal yDest As Long) As Long
Public Declare Function MVImageDrawHwnd Lib "MVGigE.dll" (ByVal hImage As Long, ByVal hWnd As Long, ByVal xDest As Long, ByVal yDest As Long) As Long
Public Declare Function MVImageRelease Lib "MVGigE.dll" (ByVal hImage As Long)
Public Declare Sub MVImageSave Lib "MVGigE.dll" (ByVal hImage As Long, ByVal fname As String)

Public Declare Function MVStartGrabWindow Lib "MVGigE.dll" (ByVal hCam As Long, ByVal hWnd As Long) As MVSTATUS_CODES
Public Declare Function MVStopGrabWindow Lib "MVGigE.dll" (ByVal hCam As Long) As MVSTATUS_CODES
Public Declare Function MVFreezeGrabWindow Lib "MVGigE.dll" (ByVal hCam As Long, ByVal bFreeze As Long) As MVSTATUS_CODES
Public Declare Function MVGetSampleGrab Lib "MVGigE.dll" (ByVal hCam As Long, ByVal hImage As Long, ByRef FrameID As Long) As MVSTATUS_CODES
Public Declare Function MVSetGrabWindow Lib "MVGigE.dll" (ByVal hCam As Long, ByVal xDest As Long, ByVal yDest As Long, ByVal wDest As Long, ByVal hDest As Long, ByVal xSrc As Long, ByVal ySrc As Long, ByVal wSrc As Long, ByVal hSrc As Long) As MVSTATUS_CODES
